Fixed dark mode issues in pages, emergancy backup

--- a/src/new.css
+++ b/src/new.css
@@ -17,8 +17,10 @@
     /* Colors */
     --text-primary: #686D76;
     --text-secondary: #31363F;
+    --text-tertiary: #373A40;
     --text-light: #EEEEEE;
     --text-orange: orange;
+    --text-error: tomato;
     --bg-primary: white;
     --bg-secondary: #686D76;
     /* background colors */
@@ -42,16 +44,18 @@
     --placeholder-anim: rgba(255,255,255,0.25);
     /* redefined variables */
     /* Colors */
-    --text-primary: white;
-    --text-secondary: white;
+    --text-primary: rgba(255,255,255,0.5);
+    --text-secondary: #ccc;
+    --text-tertiary: white;
     --text-light: #373A40;
+    --text-error: yellow;
     --bg-primary: black;
     --bg-secondary: #EEEEEE;
     /* background colors */
     --bg-mode: white;
     --bg-footer: rgba(0, 0, 0, 0.5);
     /* for links */
-    --link-primary: white;
+    --link-primary: #bce;
     --link-primary-hover: black;
     --link-bg-primary: black;
     --link-bg-primary-hover: white;
@@ -148,7 +152,8 @@ nav.top-nav{
     background-color: var(--link-primary);
 }
 .link-active{
-    box-shadow: 0 0 3px rgba(255,255,255, 0.35);
+    /* box-shadow: 0 0 3px rgba(255,255,255, 0.35); */
+    box-shadow: 0 0 3px var(--text-primary);
 }
 /* Hamburger Nav icon*/
 .hamburger {
@@ -238,18 +243,22 @@ main > section{
     font-weight: 500;
     color: var(--text-primary);
 }
-.banner .title{
+.banner .title, .about-user .title{
     font-size: 2.5rem;
     margin: 0.5rem auto;
-    color: var(--text-primary);
+    color: var(--text-secondary);
 }
 .profession{
     text-align: left;
     margin-bottom: 1rem;
-    color: var(--text-primary);
+    color: var(--text-secondary) !important;
+    padding-left: 20px;
 }
 .profession::after{
     content: '_';
+}
+.banner-main .btn-primary > i{
+    margin-right: 5px;
 }
 
 /* Service Section */
@@ -283,14 +292,13 @@ main > section{
 }
 .services-col > a{
     color: var(--text-secondary);
-    background-color: var(--text-light);
     padding: 7px 20px;
     margin-left: auto;
-    border: 1px solid var(--text-orange);
     width: fit-content;
     border-radius: 10px;
     text-decoration: none;
     display: block;
+    box-shadow: 0 0 4px var(--text-secondary);
     opacity: 0.7;
     transition: all 0.3s;
 }
